# lightsee

./: .gitignore  README.md  install-skill.sh  package-lock.json  package.json  projectology.md  sample.md  tsconfig.json  vitest.config.ts
.claude/skills/lightsee/: SKILL.md
.github/workflows/: build.yml
docs/: cloud-share-guide.md  feature-spec.md  roadmap.md  setup-claude-code.md  setup-claude-desktop.md
docs/superpowers/plans/: 2026-03-30-cloud-share-cli.md  2026-03-30-sidebars-plan.md
docs/superpowers/specs/: 2026-03-30-cloud-share-cli-design.md  2026-03-30-sidebars-design.md
lightsee-web/: .env.local.example  package-lock.json  package.json
lightsee-web/src/app/: globals.css  layout.tsx  page.tsx
lightsee-web/src/components/: DirectoryTree.tsx  HtmlExportButton.tsx  MarkdownViewer.tsx  MobileDrawer.tsx  TableOfContents.tsx
lightsee-web/src/components/__tests__/: DirectoryTree.test.tsx  (+3 more)
lightsee-web/src/lib/: markdown.ts  supabase.ts  themes.ts  types.ts
lightsee-web/supabase/.temp/: pooler-url  project-ref
lightsee-web/supabase/migrations/: 001_initial_schema.sql  002_rls_write_policies.sql  003_storage_policies.sql
src/: App.css  App.tsx  CloudSharePanel.tsx  LeftSidebar.tsx  RightSidebar.tsx  SharePanel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloud.rs  lib.rs  main.rs  share.rs  viewer.html
src/__tests__/: App.test.tsx  CloudSharePanel.test.tsx  LeftSidebar.test.tsx  RightSidebar.test.tsx  markdown.test.ts  setup.ts  themes.test.ts
(+5 files in other folders)
